# codex

.codex/: setup.sh
codex_py/: agent_loop.py  approvals.py  cli.py  config.py  pyproject.toml  tui.py
codex_py/tests/: conftest.py  test_agent.py  test_cli.py
