[project]
name = "codex_py"
version = "0.1.0"
description = "Codex Python CLI"
authors = [{name = "OpenAI"}]
requires-python = ">=3.9"

[project.dependencies]
typer = "^0.9"
openai = "^1.3"
textual = "^0.51"

[project.optional-dependencies.dev]
pytest = "^7.4"

[project.scripts]
codex = "codex_py.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
